problème token API pour llm donc test avec tags et compatibilité nvda

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     aria-describedby="map-desc"
     aria-live = "polite">
     </div>
+
+    <div id="nvda-reader" aria-live="assertive" style="position:absolute; left:-9999px;"></div>
+
 </body>
 </html>
